# ai-email-summarizer

./: # Design System Guide Creative & Mo.txt  # Design System Guide Trust & Clear Bento Grid.txt  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_SIGNING_POLICY.md  CONTRIBUTING.md  LICENSE  PRD.txt  PRIVACY.md  README.md  SECURITY.md  ai.txt  ai_classifier.py  config.example.json  dynamic_category_manager.py  file_manager.py  gui.py  install_playwright.bat  install_playwright.sh  mail_collector.py  mail_summarizer.py  main.py  obsidian_manager.py  output.txt  pagination_handler.py  pyproject.toml  pyrightconfig.json  requirements.txt  run_dev.cmd  run_dev.ps1  scheduler.py  security_manager.py  test.txt  utils.py  배포계획.TXT
.claude/: settings.local.json
.github/: dependabot.yml
docs/: MACOS_INSTALL_GUIDE_KO.md  MACOS_SMOKE_TEST_CHECKLIST.md  MACOS_SMOKE_TEST_RESULTS_TEMPLATE.md  MACOS_SUPPORT_PLAN.md  MACOS_TEST_HANDOFF_KO.md  MLX_ENGINE_PLAN.md  RELEASE_CHECKLIST.md  SIGNPATH_FOUNDATION.md  signpath_project_setup_steps.txt  ui-routes-refactor-plan.md
installer/: pyinstaller_rth_cffi.py  webmail-summary.iss
landing/: README.md  next.config.ts  package-lock.json  package.json
tests/: test_app_data_paths.py  test_app_paths.py  test_cloud_multimodal.py  test_cloud_multimodal_selection.py  test_cloud_multimodal_settings.py  test_error_reports.py  test_home_day_resummarize_ui.py  test_imap_client_filters.py  test_imap_tls_compat.py  test_jobs_sse_resume.py  test_local_engine_platform_assets.py  test_long_summarize_noise.py  (+17 more)
(+191 files in other folders)
